# europe_or_not

./: .gitignore  README.md  main.py  pyproject.toml
data/: cities.csv
scripts/: add_coordinates.py  collect_embeddings.py  download_cities.py  fill_coverage_gaps.py  migrate_db_to_binary.py  render_europe_focus.py  render_heatmap.py  render_heatmap_fast.py  render_map.py  train_classifier.py
src/europe_or_not/: __init__.py  scorer.py
tests/: test_placeholder.py
