[project]
name = "europe-or-not"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.16.0",
    "tqdm>=4.67.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/europe_or_not"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
